# thesis

./: README.markdown  thesis.cabal
doc/: .gitignore  Makefile  abstract.lhs  draft.lhs  references.bib  shell.nix  thesis.lhs  thesis.tex
doc/plots/: Makefile  disabled.csv  enabled.csv  plots.r
examples/: test.hs
flp/: analysis.rb  analysis.sh
interim-presentation/: slides.tex
src/: Main.hs
what-morphism-examples/: what-morphism-examples.cabal
what-morphism-examples/src/: Lib.hs  Main.hs
