Name:                thesis
Version:             0.0.0.0
License:             BSD3
License-file:        LICENSE
Author:              Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:          Jasper Van der Jeugt <m@jaspervdj.be>
Category:            Language
Build-type:          Simple
Cabal-version:       >=1.8

Executable thesis
  Ghc-options:    -Wall
  Hs-source-dirs: src
  Main-is:        Main.hs

  Build-depends:
    base      >= 4   && < 5,
    ghc       >= 7.4 && < 7.5,
    ghc-paths >= 0.1 && < 0.2

